<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--android:divider="@drawable/separator"
    android:showDividers="middle"
    android:dividerPadding="0dp"
    >-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/blue"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@drawable/separator"
        />

    <FrameLayout
        android:id="@+id/scene"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/del_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/del_record"
            android:textSize="25dp"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:gravity="left"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="invisible"
            >

            <TextView
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sure"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/rec_yes"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/rec_no"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>



        </android.support.constraint.ConstraintLayout>

    </FrameLayout>


    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@drawable/separator"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:textSize="25dp"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:gravity="left"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            />

        <View
            android:id="@+id/prohibition"
            android:layout_width="100sp"
            android:layout_height="55sp"
            android:background="@drawable/ic_not_interested_red_24dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />


    </FrameLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@drawable/separator"
        />

    <Button
        android:id="@+id/about_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_app"
        android:textSize="25dp"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:gravity="left"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@drawable/separator"
        />

    <!--<Button
        android:id="@+id/crash_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Crash app"
        android:textSize="25dp"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:gravity="left"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        />-->

</LinearLayout>